# IdeaBridge-server

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
src/auth/dto/: request.py  user.py
src/auth/repository/: abc_user_repository.py  user_repository.py
src/auth/service/: auth_service.py
src/common/: __init__.py  config.py
src/common/db/supabase/: client.py
src/common/exception/: error_codes.py  exception.py  service_exception.py  util_exception.py
src/common/logging/: logging.py
src/common/util/: token_manager.py
src/exception/: exception.py
test/auth/repository/: conftest.py  test_user_repository.py
test/auth/service/: test_auth_service.py
