[project]
name = "ideabridge-server"
version = "0.1.0"
description = ""
authors = [
    {name = "minjun",email = "robertmin522@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"